--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,6 @@
 @font-face {
   font-family: 'Respira Black';
   src: url('./assets/fonts/Respira\ Black.ttf') format('opentype');
-  font-display: optional;
 }
 
 @font-face {
@@ -156,7 +155,9 @@ h1, span {
 }
 
 
-
+.text-hidden {
+  visibility: hidden; 
+}
 
 .word {
   display: inline-block;
