--- a/src/index.css
+++ b/src/index.css
@@ -122,6 +122,7 @@ body, html {
   padding: 0;
   height: 100%;
   scroll-behavior: smooth;
+  /* background-color: #212121; */
   background-color: #f2f0e9;
   background-image: 
     radial-gradient(circle, rgba(0, 0, 0, 0.03) 1px, transparent 1px),
@@ -156,7 +157,7 @@ h2 {
 .custom-button::after {
   content: "➔"; /* Flèche */
   position: absolute;
-  bottom: 10%; /* Position parfaite conservée */
+  bottom: -20%; /* Position parfaite conservée */
   right: 5%; /* Toujours à droite */
   font-size: 1.5rem; /* Taille de la flèche */
   color: #212121; /* Couleur de la flèche */
@@ -280,37 +281,7 @@ line {
 }
 
 
-/****** BANDEAU DEFILANT ******/
 
-
-.defileParent {
-  display: block;
-  top: 100px;
-  overflow: hidden;
-  position: relative;
-  width:100%;
-  max-width: 100%;
-  height: 2em; /* Ajustez en fonction de la taille de la police */
-}
-
-.defile {
-  display: flex;
-  animation: marqueelike 10s linear infinite;
-  white-space: nowrap;
-}
-
-.defile span {
-  padding-right: 2em; /* Ajoute un espace entre les répétitions si nécessaire */
-}
-
-@keyframes marqueelike {
-  0% {
-    transform: translateX(0);
-  }
-  100% {
-    transform: translateX(-100%);
-  }
-}
 
 
 .tab {
@@ -336,3 +307,4 @@ line {
     display: none;
   }
 }
+
